--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Use Grade Calc to calculate students' grades very quickly">
 <meta name="keywords" content="professor, grade, calculator, calc">
-<meta id="metaColor1" name="theme-color" content="#ccc">
-<meta id="metaColor2" name="msapplication-navbutton-color" content="#ccc">
-<meta id="metaColor3" name="apple-mobile-web-app-status-bar-style" content="#ccc">
+<meta id="metaColor1" name="theme-color" content="#393">
+<meta id="metaColor2" name="msapplication-navbutton-color" content="#393">
+<meta id="metaColor3" name="apple-mobile-web-app-status-bar-style" content="#393">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
