--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>Grade Calc</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
-<link rel="shortcut icon" type="image/png" href="logo/calc-logo.png"/>
+<link rel="shortcut icon" type="image/png" href="icon.png"/>
 
 <meta charset="utf-8">
 <meta name="title=" content="Grade Calc">
@@ -26,7 +26,7 @@
 <div class="container-fluid">
 
 <div id="titleDiv">
-<img id="logo" src="logo/calc-logo.svg"></img>
+<img src="icon.svg" width="64px"></img>
 <h3 class="display-4">Quick Grade Calculator
 <sub>for professors</sub>
 </h3>
