--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<!-- V.1.0.7 -->
+<!-- V.1.0.8 -->
 <html>
 <head>
 <title>Grade Calc</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
+<link id="nightTheme" rel="stylesheet" type="text/css" href="">
 <link rel="shortcut icon" type="image/png" href="icon.png"/>
 
 <meta charset="utf-8">
@@ -32,6 +33,7 @@
 </h3>
 <button title="Reset" class="btn btn-default" tabindex="-1" onclick="location.reload();"><i class="fas fa-sync-alt"></i></button>
 <button id="fullscreen" title="Toggle Fullscreen" class="btn btn-default" tabindex="-1"><i class="fas fa-arrows-alt"></i></button>
+<button id="nightButton" title="Toggle Night Mode" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i></button>
 </div>
 
 <div class="alert alert-success alert-dismissible">
