--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Grade Calc</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+
 <link id="nightTheme" rel="stylesheet" type="text/css" href="">
 <link rel="shortcut icon" type="image/png" href="icon.png"/>
 
@@ -22,26 +22,34 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>  
 
+<link rel="stylesheet" type="text/css" href="styles.css">
+
+
 </head>
 <body>
 <div class="container-fluid">
 
-<div id="titleDiv">
-<img src="icon.svg" width="64px"></img>
-<h3 class="display-4">Quick Grade Calculator
-<sub>for professors</sub>
-</h3>
-<button title="Reset" class="btn btn-default" tabindex="-1" onclick="location.reload();"><i class="fas fa-sync-alt"></i></button>
-<button id="fullscreen" title="Toggle Fullscreen" class="btn btn-default" tabindex="-1"><i class="fas fa-arrows-alt"></i></button>
-<button id="nightButton" title="Toggle Night Mode" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i></button>
+<div class="row">
+	<div class="col-md-10 col-sm-12">
+		<img src="icon.svg" width="64px"></img>
+		<h3 class="display-4">Quick Grade Calculator <sub>for professors</sub></h3>
+	</div>
+
+	<div class="col-md-2 col-sm-12">
+		<br>
+		<button title="Reset" class="btn btn-default" tabindex="-1" onclick="location.reload();"><i class="fas fa-sync-alt"></i></button>
+		<button id="fullscreen" title="Toggle Fullscreen" class="btn btn-default" tabindex="-1"><i class="fas fa-arrows-alt"></i></button>
+		<button id="nightButton" title="Toggle Night Mode" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i></button>
+	</div>
 </div>
+
 
 <div class="alert alert-success alert-dismissible">
   <button type="button" class="close" data-dismiss="alert" tabindex="-1">&times;</button>
   <p id="info"><i>Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly change the student's grade on each assignment</i></p>
 </div>
 
-
+<br>
 <b><div id="gradeItems">
 </div></b>
 
@@ -74,6 +82,7 @@
 <br>
 
 </div>
+
 <script src="script.js"></script>
 
 <!--Google Analytics-->
