--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!-- V.1.0.8 -->
 <html>
 <head>
 <title>Grade Calc</title>
@@ -30,23 +29,24 @@
 <div class="container-fluid">
 
 <div class="row">
-	<div class="col-md-10 col-sm-12">
+	<div class="col-md-9 col-sm-12">
 		<img src="icon.svg" width="64px"></img>
 		<h3 class="display-4">Quick Grade Calculator <sub>for professors</sub></h3>
 	</div>
-
-	<div class="col-md-2 col-sm-12">
+	<div class="col-md-3 col-sm-12">
 		<br>
+		<button id="nightButton" title="Toggle Night Mode" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i></button>
 		<button title="Reset" class="btn btn-default" tabindex="-1" onclick="location.reload();"><i class="fas fa-sync-alt"></i></button>
 		<button id="fullscreen" title="Toggle Fullscreen" class="btn btn-default" tabindex="-1"><i class="fas fa-arrows-alt"></i></button>
-		<button id="nightButton" title="Toggle Night Mode" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i></button>
+
 	</div>
 </div>
 
+<br>
 
 <div class="alert alert-success alert-dismissible">
   <button type="button" class="close" data-dismiss="alert" tabindex="-1">&times;</button>
-  <p id="info"><i>Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly change the student's grade on each assignment</i></p>
+  <p id="info"><i class="fas fa-info-circle"></i> Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly edit students' grades</p>
 </div>
 
 <br>
