--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>  
 
 <link rel="stylesheet" type="text/css" href="styles.css">
-
+<script src="script.js"></script>
 
 </head>
 <body>
@@ -45,7 +45,7 @@
 <br>
 
 <div class="alert alert-success alert-dismissible">
-  <button type="button" class="close" data-dismiss="alert" tabindex="-1">&times;</button>
+  <button type="button" class="deleteButton btn btn-light btn-sm" data-dismiss="alert" tabindex="-1"><i class="fas fa-times"></i></button>
   <p id="info"><i class="fas fa-info-circle"></i> Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly edit students' grades</p>
 </div>
 
@@ -59,8 +59,7 @@
 <button id="clear" title="Clear All Grades" class="btn btn-default" tabindex="-1"><i class="fas fa-eraser"></i> Clear</button>
 <button id="same" title="Make all weights the same" class="btn btn-default" tabindex="-1"><i class="fas fa-gavel"></i> Same Weights</button>
 
-
-<br><br>
+<hr>
 <div id="calcDiv">
 <button id="calc" class="btn btn-success btn-lg" title="Calculate weighted course grade">Calculate</button>
 <br><br>
@@ -83,17 +82,7 @@
 
 </div>
 
-<script src="script.js"></script>
 
-<!--Google Analytics-->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-104632692-1', 'auto');
-  ga('send', 'pageview');
-</script>
 </body>
 </html>
