moved images, code cleaning

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Grade Calc</title>
 
 <link id="nightTheme" rel="stylesheet" type="text/css" href="">
-<link rel="shortcut icon" type="image/png" href="icon.png"/>
+<link rel="shortcut icon" type="image/png" href="img/icon.png"/>
 
 <meta charset="utf-8">
 <meta name="title=" content="Grade Calc">
@@ -30,7 +30,7 @@
 
 <div class="row">
 	<div class="col-md-9 col-sm-12">
-		<img src="icon.svg" width="64px"></img>
+		<img src="img/icon.svg" width="64px"></img>
 		<h3 class="display-4">Quick Grade Calculator <sub>for professors</sub></h3>
 	</div>
 	<div class="col-md-3 col-sm-12">
