--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 <textarea class="form-control" id="console" rows="5"></textarea>
 <br>
 
+<p>Read about this project <a href="https://github.com/rgbstudios/grade-calc/blob/master/README.md" target="_blank">here</a>
+
 </div>
-
-
 
 </body>
 </html>
