--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>  
 
 <link rel="stylesheet" type="text/css" href="css/styles.css">
-<script src="script.js"></script>
+<script src="js/scripts.js"></script>
 
 </head>
 <body>
