starting to clean project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <title>Grade Calc</title>
 
@@ -10,7 +10,7 @@
 <meta name="title=" content="Grade Calc">
 <meta name="robots" content="index, follow">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Use Grade Calc to calculate students' grades very quickly">
+<meta name="description" content="Use Grade Calc to calculate students' grades quickly and simply">
 <meta name="keywords" content="professor, grade, calculator, calc">
 <meta id="metaColor1" name="theme-color" content="#393">
 <meta id="metaColor2" name="msapplication-navbutton-color" content="#393">
