--- a/index.html
+++ b/index.html
@@ -22,67 +22,57 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>  
 
 <link rel="stylesheet" type="text/css" href="css/styles.css">
-<script src="js/scripts.js"></script>
 
 </head>
 <body>
 <div class="container-fluid">
 
 <div class="row">
-	<div class="col-md-9 col-sm-12">
+	<div class="col-md-9 col-sm-12 my-2">
 		<img src="img/icon.svg" width="64px"></img>
-		<h3 class="display-4">Quick Grade Calculator <sub>for professors</sub></h3>
+		<h1>Quick Grade Calculator <sub>for professors</sub></h1>
 	</div>
-	<div class="col-md-3 col-sm-12">
-		<br>
-		<button id="nightButton" title="Toggle Night Mode" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i></button>
+	<div class="col-md-3 col-sm-12 my-2">
+		<button id="night-btn" title="Toggle Night Mode" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i></button>
 		<button title="Reset" class="btn btn-default" tabindex="-1" onclick="location.reload();"><i class="fas fa-sync-alt"></i></button>
-		<button id="fullscreen" title="Toggle Fullscreen" class="btn btn-default" tabindex="-1"><i class="fas fa-arrows-alt"></i></button>
-
+		<button id="fullscreen-btn" title="Toggle Fullscreen" class="btn btn-default" tabindex="-1"><i class="fas fa-arrows-alt"></i></button>
 	</div>
 </div>
 
-<br>
-
-<div class="alert alert-success alert-dismissible">
-  <button type="button" class="deleteButton btn btn-light btn-sm" data-dismiss="alert" tabindex="-1"><i class="fas fa-times"></i></button>
-  <p id="info"><i class="fas fa-info-circle"></i> Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly edit students' grades</p>
+<div class="alert alert-success alert-dismissible my-4">
+  <button type="button" class="delete-btn btn btn-light btn-sm" data-dismiss="alert" tabindex="-1"><i class="fas fa-times"></i></button>
+  <p><i class="fas fa-info-circle"></i> Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly edit students' grades</p>
 </div>
 
-<br>
-<b><div id="gradeItems">
-</div></b>
+<div id="grade-items"></div>
 
-<input id="studentName"  maxlength="50" type="text" class="form-control input-sm" placeholder="Student Name (optional)"></input>
+<input id="student-name"  maxlength="50" type="text" class="form-control input-sm" placeholder="Student Name (optional)"></input>
 
-<button id="add" title="New Item" class="btn btn-default" tabindex="-1"><i class="fas fa-plus"></i> New Item</button>
-<button id="clear" title="Clear All Grades" class="btn btn-default" tabindex="-1"><i class="fas fa-eraser"></i> Clear</button>
-<button id="same" title="Make all weights the same" class="btn btn-default" tabindex="-1"><i class="fas fa-gavel"></i> Same Weights</button>
+<button id="add-btn" title="New Item" class="btn btn-default" tabindex="-1"><i class="fas fa-plus"></i> New Item</button>
+<button id="clear-btn" title="Clear All Grades" class="btn btn-default" tabindex="-1"><i class="fas fa-eraser"></i> Clear</button>
+<button id="same-btn" title="Make all weights the same" class="btn btn-default" tabindex="-1"><i class="fas fa-balance-scale"></i> Same Weights</button>
 
 <hr>
-<div id="calcDiv">
-<button id="calc" class="btn btn-success btn-lg" title="Calculate weighted course grade">Calculate</button>
-<br><br>
-<h1 id="grade">Grade will appear here </h1>
-<button id="copy" title="Copy grade to clipboard" class="btn btn-default" tabindex="-1"><i class="fas fa-copy"></i></button>
-
-<br>
-<h3 id="letter"></h3>
-</div>
+<button id="calc-btn" class="btn btn-success btn-lg btn-block" title="Calculate weighted course grade">Calculate <i class="fas fa-chevron-circle-right"></i></button>
+<h1 id="grade-text" class="m-2">Grade will appear here </h1>
+<button id="copy-btn" title="Copy grade to clipboard" class="btn btn-default" tabindex="-1"><i class="fas fa-copy"></i></button>
+<h3 id="letter-text"></h3>
 <hr>
-<h4 style="text-align:center; display:inline-block;">History</h4>
 
-<button id="clearConsole" title="Clear Console" class="btn btn-default" tabindex="-1"><i class="fas fa-backspace"></i> Clear History</button>
-<a id="downloadLink" target="_blank" download="stats.txt">
-<button id="downloadConsole" title="Download Console" class="btn btn-default" tabindex="-1"><i class="fas fa-download"></i> Download History</button>
+<h4><i class="fas fa-history"></i> History</h4>
+
+<button id="clear-console-btn" title="Clear Console" class="btn btn-default" tabindex="-1"><i class="fas fa-backspace"></i> Clear History</button>
+<a id="download-link" target="_blank" download="stats.txt">
+<button id="download-console-btn" title="Download Console" class="btn btn-default" tabindex="-1"><i class="fas fa-download"></i> Download History</button>
 </a>
 
-<textarea class="form-control" id="console" rows="5"></textarea>
+<textarea id="console" class="form-control" rows="5"></textarea>
 <br>
 
 <p>Read about this project <a tabindex="-1" href="https://github.com/rgbstudios/grade-calc/blob/master/README.md" target="_blank">here</a>
 
 </div>
 
+<script src="js/scripts.js"></script>
 </body>
 </html>
