--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="alert alert-success alert-dismissible my-4">
-  <button type="button" class="delete-btn btn btn-light btn-sm" data-dismiss="alert" tabindex="-1"><i class="fas fa-times"></i></button>
+  <button type="button" class="delete-btn btn btn-sm" data-dismiss="alert" tabindex="-1"><i class="fas fa-times"></i></button>
   <p><i class="fas fa-info-circle"></i> Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly edit students' grades</p>
 </div>
 
