--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			</div>
 			<div class="modal-body">
 				<p><i class="fas fa-info-circle"></i> Use <kbd>tab</kbd> and <kbd>shift</kbd> + <kbd>tab</kbd> to quickly edit students' grades</p>
+				<p>Made by <a href="https://justingolden.me" target="_blank">Justin Golden</a> for <a href="https://rgbstudios.org" target="_blank">RGB Studios</a></p>
 			</div>
 			<div class="modal-footer">
 				<p>Read about this project <a tabindex="-1" href="https://github.com/rgbstudios/grade-calc/blob/master/README.md" target="_blank">here</a>
@@ -96,7 +97,8 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				
+				<p>Download All Grade Data as CSV (Alpha):</p>
+				<button id="speadsheet-btn" title="Download all grade data as spreadsheet" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-download"></i> Download Grades</button>
 			</div>
 			<div class="modal-footer">
 				<button id="night-btn" title="Toggle night mode" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i> Night</button>
