--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#console-collapse" aria-expanded="false" aria-controls="console-collapse">
 <i class="fas fa-history"></i> History
 </button>
-<div class="collapse" id="console-collapse">
+<div class="collapse show" id="console-collapse">
 	<div class="card card-body">
 		<textarea id="console" class="form-control" rows="5"></textarea>
 		<button id="clear-console-btn" title="Clear history text" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-backspace"></i> Clear History</button>
