--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<div class="col-md-3 col-sm-12 my-2">
 		<span data-toggle="modal" data-target="#info-modal"><button title="Website information, usage tips, and help" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-info-circle"></i></button></span>
 		<span data-toggle="modal" data-target="#settings-modal"><button title="Website settings" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-cog"></i></button></span>
+		<span data-toggle="modal" data-target="#gradebook-modal"><button title="View gradebook (grade history and assignments)" data-toggle="popover" class="btn btn-dark" tabindex="-1"><i class="fas fa-book"></i> Gradebook</button></span>
 	</div>
 </div>
 
@@ -43,28 +44,17 @@
 
 <input id="student-name"  maxlength="50" type="text" class="form-control input-sm" placeholder="Student Name (optional)"></input>
 
-<button id="add-btn" title="Add a new assignment" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-plus"></i> New Item</button>
-<button id="clear-btn" title="Clear all grades" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-eraser"></i> Clear</button>
-<button id="same-btn" title="Make all assignment weights the same" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-balance-scale"></i> Same Weights</button>
+<button id="add-btn" title="Add a new assignment" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-plus"></i> New Item</button>
+<button id="clear-btn" title="Clear all grades" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-eraser"></i> Clear</button>
+<button id="same-btn" title="Make all assignment weights the same" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-balance-scale"></i> Same Weights</button>
 
 <hr>
 <button id="calc-btn" class="btn btn-success btn-lg btn-block" title="Calculate weighted course grade" data-toggle="popover">Calculate <i class="fas fa-chevron-circle-right"></i></button>
+
+<div id="grade-result-div">
 <h1 id="grade-text" class="m-2">Grade will appear here </h1>
-<button id="copy-btn" title="Copy grade to clipboard" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-copy"></i></button>
+<button id="copy-btn" title="Copy grade to clipboard" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-copy"></i></button>
 <h3 id="letter-text"></h3>
-<hr>
-
-
-<button class="btn btn-default" type="button" data-toggle="collapse" data-target="#console-collapse" aria-expanded="false" aria-controls="console-collapse">
-<i class="fas fa-history"></i> History
-</button>
-<div class="collapse show" id="console-collapse">
-	<div class="card card-body">
-		<textarea id="console" class="form-control" rows="5"></textarea>
-		<button id="clear-console-btn" title="Clear history text" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-backspace"></i> Clear History</button>
-		<a id="download-link" target="_blank" download="grades.txt">
-		<button id="download-console-btn" title="Download history to txt file" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-download"></i> Download History</button></a>
-	</div>
 </div>
 
 <div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="info-modal-title" aria-hidden="true">
@@ -104,6 +94,38 @@
 				<button id="night-btn" title="Toggle night mode" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i> Night</button>
 				<button title="Reset everything" data-toggle="popover" class="btn btn-default" tabindex="-1" onclick="location.reload();"><i class="fas fa-sync-alt"></i> Reset</button>
 				<button id="fullscreen-btn" title="Toggle fullscreen" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-arrows-alt"></i> Fullscreen</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="gradebook-modal" tabindex="-1" role="dialog" aria-labelledby="gradebook-modal-title" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="gradebook-modal-title"><i class="fas fa-book"></i> Gradebook</h5>
+				<button type="button" class="close delete-btn" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+
+
+				<button class="btn btn-default" type="button" data-toggle="collapse" data-target="#console-collapse" aria-expanded="false" aria-controls="console-collapse">
+				<i class="fas fa-history"></i> History
+				</button>
+				<div class="collapse show" id="console-collapse">
+					<div class="card card-body">
+						<textarea id="console" class="form-control" rows="5"></textarea>
+						<button id="clear-console-btn" title="Clear history text" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-backspace"></i> Clear History</button>
+						<a id="download-link" target="_blank" download="grades.txt">
+						<button id="download-console-btn" title="Download history to txt file" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-download"></i> Download History</button></a>
+					</div>
+				</div>
+
+			</div>
+			<div class="modal-footer">
+				
 			</div>
 		</div>
 	</div>
