cleaning js, add remove all btn, css updates

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<p>Download All Grade Data as CSV (Alpha):</p>
+				<p>Grade Data:</p>
 				<button id="speadsheet-btn" title="Download all grade data as spreadsheet" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-download"></i> Download Grades</button>
+				<p class="mt-4">Danger:</p>
+				<button id="remove-all-btn" title="Remove all assignments" data-toggle="popover" class="btn btn-danger" tabindex="-1"><i class="fas fa-trash"></i> Remove All Assignments</button>
 			</div>
 			<div class="modal-footer">
 				<button id="night-btn" title="Toggle night mode" data-toggle="popover" class="btn btn-default" tabindex="-1"><i class="fas fa-moon"></i> Night</button>
@@ -133,6 +135,7 @@
 
 </div>
 
+<script src="js/ui.js"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
