--- a/index.html
+++ b/index.html
@@ -137,5 +137,6 @@
 
 <script src="js/ui.js"></script>
 <script src="js/scripts.js"></script>
+<script src="js/grade-data.js"></script>
 </body>
 </html>
