--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
 <meta id="metaColor2" name="msapplication-navbutton-color" content="#393">
 <meta id="metaColor3" name="apple-mobile-web-app-status-bar-style" content="#393">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>  
 
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 
@@ -135,8 +132,14 @@
 
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
 <script src="js/ui.js"></script>
 <script src="js/scripts.js"></script>
 <script src="js/grade-data.js"></script>
+<script src="js/util.js"></script>
+
 </body>
 </html>
