--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 <div id="grade-result-div">
 <h1 id="grade-text" class="m-2">Grade will appear here </h1>
+<span id="warning-text" class="text-danger"></span>
 <button id="copy-btn" title="Copy grade to clipboard" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-copy"></i></button>
 <h3 id="letter-text"></h3>
 </div>
