add calc and clear option

--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
 					<input type="checkbox" class="custom-control-input" id="select-onclick-switch">
 					<label class="custom-control-label" for="select-onclick-switch">Select input text on click</label>
 				</div>
+				<div class="custom-control custom-switch">
+					<input type="checkbox" class="custom-control-input" id="clear-oncalc-switch">
+					<label class="custom-control-label" for="clear-oncalc-switch">Clear inputs upon calculation</label>
+				</div>
 
 				<p class="mt-4">Danger:</p>
 				<button id="remove-all-btn" title="Remove all assignments" data-toggle="popover" class="btn btn-danger" tabindex="-1"><i class="fas fa-trash"></i> Remove All Assignments</button>
