--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
 
 			</div>
 			<div class="modal-footer">
-				<button id="speadsheet-btn" title="Download all grade data as spreadsheet" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-download"></i> Download Grades</button>				
+				<button id="download-spreadsheet-btn" title="Download all grade data as spreadsheet" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-download"></i> Download Grades</button>
+				<button id="upload-spreadsheet-btn" title="Upload previous grade data spreadsheet" data-toggle="popover" class="btn btn-secondary" tabindex="-1"><i class="fas fa-upload"></i> Upload Grades</button>
+				<input id="spreadsheet-file-input" type="file" class="d-none" accept=".csv">
 			</div>
 		</div>
 	</div>
